# Multi-Agent-Policy-Navigator

./: .gitignore  README.md  TEST_QUERIES.md  policy-navigator-report.docx  pyproject.toml
data/: DATA_INVENTORY.json
data/02_Credit_Loans/: Kisan_Credit_Card_KCC_Scheme_Guide.txt
data/11_Soil_Fertilizer/: Fertilizer_Management_Guide.txt
data/13_Crop_Cultivation_Guides/: Cotton_Cultivation_Guide.txt  Groundnut_Cultivation_Guide.txt  Maize_Cultivation_Guide.txt  Paddy_Rice_Cultivation_Guide.txt  Redgram_Tur_Cultivation_Guide.txt
data/14_Pest_Disease_Management/: Common_Pests_IPM_Guide.txt
data/16_Crop_Calendar/: AP_Crop_Sowing_Calendar.txt
mcp_servers/: __init__.py  ollama_websearch_mcp_server.py  pdf_extractor_mcp_server.py  pdf_mcp_server.py
project_requirements/: minimum-requirements.txt
scripts/: __init__.py  initialize_rag.py  run_pdf_mcp_server.py
src/policy_navigator/: __init__.py  crew.py  main.py
src/policy_navigator/adk/: __init__.py  adk_agent.py  adk_agent_adapter.py
src/policy_navigator/callbacks/: __init__.py  execution_tracker.py  monitoring.py
src/policy_navigator/config/: agents.yaml  llm_config.py  tasks.yaml  tool_mappings.py
src/policy_navigator/core/: __init__.py  orchestrator.py
src/policy_navigator/guardrails/: __init__.py  guardrail_config.py  guardrail_factory.py
src/policy_navigator/models/: __init__.py  schemas.py
src/policy_navigator/retrieval/: __init__.py  document_processor.py  (+1 more)
web/api/: __init__.py  app.py
web/react-ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/static/: app.js  index.html  styles.css
(+22 files in other folders)
